tests/compile-fail/integration_suite__integration__type_check__stackless__times_count.snap
---
source: tests/integration/type_check.rs
expression: stderr
---
error: type error
   ┌─ <input>:27:13
   │
27 │       times(F0) {}  
   │             ^^ a float
   │
   = an integer is required


